Enqueueing assets. Styles are now  in the plugin. JS still on firebase CDN

--- a/resources/views/styles.twig
+++ b/resources/views/styles.twig
@@ -7,7 +7,7 @@
         Configurable CSS values provided through WP settings panel.
         Overrides values in common CSS.
     #}
-    .answer {
+    .btn.senti-poll-vote-button {
       background-color: {{ plugin_settings_property_primary_colour|default('ff00ff') }};
       color: {{ plugin_settings_property_secondary_colour|default('black') }};
       font-family: {{ plugin_settings_property_font_family }};
