--- a/resources/assets/styles.css
+++ b/resources/assets/styles.css
@@ -1,407 +1,420 @@
-.widget-quiz {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.pulse {
+  -webkit-animation-name: pulse;
+  -moz-animation-name: pulse;
+  -o-animation-name: pulse;
+  -ms-animation-name: pulse;
+  animation-name: pulse;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  -ms-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
-/* Module/Block: Quiz */
-.quiz {
-  background: transparent;
+.fadeOutUp {
+  -webkit-animation-name: fadeOutUp;
+  -moz-animation-name: fadeOutUp;
+  -o-animation-name: fadeOutUp;
+  -ms-animation-name: fadeOutUp;
+  animation-name: fadeOutUp;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  -ms-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
-.quiz ul {
-  overflow: hidden;
+.senti-poll {
+  border-top: #dcdcdc 1px solid;
+  padding-top: 32px;
+  max-width: 760px;
+  margin: auto;
 }
-.quiz__question-container {
-  position: relative;
+.senti-poll-question {
+  text-align: center;
+  margin-bottom: 20px;
 }
-/* Module/Block: Question */
-.question {
-  margin-bottom: 30px;
-  overflow: hidden;
+.senti-poll-answers {
+  margin-bottom: 40px;
 }
-.question__number {
-  margin-bottom: 1rem;
+.senti-poll-votes-so-far {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: #1a1a1a;
+  margin-bottom: 20px;
 }
-.question__label {
-  float: left;
-  margin-bottom: 0;
-  line-height: 1.3rem;
+.senti-poll-progress-bar {
+  text-align: center;
 }
-/* Module/Block: Question Image */
-.question-image {
-  margin: 30px auto;
-  max-width: 220px;
+.senti-poll-progress-text {
+  padding: 10px 0px;
+}
+.senti-poll-social-prompt {
+  text-align: center;
+}
+.btn.senti-poll-sharing-button {
+  -webkit-border-radius: 0px !important;
+  border-radius: 0px !important;
+  text-transform: uppercase;
   display: block;
+  float: left;
+  width: 33.3333333333%;
+  border: none;
+  color: #fff;
+  font-size: 14px;
+  letter-spacing: 0.1em;
+  padding: 0px;
 }
-@media (min-width: 401px) {
-  .question-image {
-    max-width: 300px;
+.btn.senti-poll-vote-button {
+  -webkit-border-radius: 10px !important;
+  border-radius: 10px !important;
+  height: auto;
+  padding: 10px;
+  line-height: 1.3;
+}
+@media (min-width: 480px) {
+  .btn.senti-poll-sharing-button {
+    font-size: 16px;
+    letter-spacing: 0.19em;
   }
 }
-/* Module/Block: Answers */
-.answers {
-  clear: both;
-  margin-bottom: 60px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+.no-fadeOutUp,
+.fadeOutUp {
+  float: right;
 }
-.answers li {
-  width: 48%;
-  margin-right: 4%;
-  margin-bottom: 30px;
-  float: left;
+.no-fadeOutUp {
+  display: none;
+}
+.fadeOutUp {
+  display: inline;
+}
+.senti-poll-button-wrapper {
   position: relative;
-  list-style: none;
 }
-.answers li:nth-child(even) {
-  margin-right: 0;
+.senti-poll-button-wrapper div {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  line-height: 1;
+  color: inherit;
 }
-/* Module/Block: Answer */
-.answer {
-  min-height: 90px;
-  display: block;
-  cursor: pointer;
-  text-transform: uppercase;
-  -webkit-border-radius: 1.5rem;
-  border-radius: 1.5rem;
-  display: table;
-  background-color: rgba(255,153,0,0.5);
-  width: 100%;
-  height: 100%;
+.senti-poll-sharing-facebook {
+  background-color: #3b5999;
 }
-.answer:hover {
-  background-color: #000;
-  color: #fff;
+.senti-poll-sharing-facebook:hover {
+  background-color: #293e6b;
 }
-.answer-text {
-  display: table-cell;
+.senti-poll-sharing-twitter {
+  background-color: #55acee;
+}
+.senti-poll-sharing-twitter:hover {
+  background-color: #157ece;
+}
+.senti-poll-sharing-google {
+  background-color: #dd4b39;
+}
+.senti-poll-sharing-google:hover {
+  background-color: #a62c1d;
+}
+.senti-poll-prompt {
   text-align: center;
-  pointer-events: none;
-  vertical-align: middle;
-  padding: 10px;
+  display: block;
 }
-.answer.selected {
-  background-color: #000;
-  color: #fff;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-.answer .answer-image {
-  width: 90%;
-  margin: 5%;
-}
-/* Module/Block: Quiz Complete Panel */
-.quiz-complete-panel {
-  border-top: 1px solid #dcdcdc;
-  padding-top: 30px;
-  margin-bottom: -3px;
-}
-.quiz-complete-panel h1 {
-  margin-bottom: 10px;
-}
-/* Module/Block: Quiz Complete Panel Progress */
-.cp-progress {
-  position: static;
-}
-.cp-progress.is-static {
-  position: static;
+.senti-poll-quote {
+  font-size: 24px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  line-height: 1.3;
+  -webkit-font-smoothing: antialiased;
 }
 @media (min-width: 768px) {
-  .cp-progress {
-    display: block;
-    position: fixed;
-    background: #fff;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    bottom: 0px;
-    width: 100%;
-    -webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
+  .senti-poll-quote {
+    font-size: 34px;
   }
 }
-@media (min-width: 1024px) {
-  .cp-progress {
-    width: auto;
-    max-width: 650px;
-  }
+.senti-poll-black-bold {
+  color: #000;
+  font-weight: bold;
 }
-.cp-progress ul {
-  margin-bottom: 0;
-  margin-right: 1px;
-}
-.cp-progress li {
-  cursor: pointer;
-  float: left;
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  line-height: 30px;
-  padding-left: 0;
-  font-family: 'Graphik Web', 'Arial Black', 'Arial Bold', Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  margin-right: 2px;
-  margin-bottom: 3px;
-  -webkit-perspective: 1000;
-  -moz-perspective: 1000;
-  -ms-perspective: 1000;
-  perspective: 1000;
-  list-style: none;
-}
-.cp-progress li:last-child {
-  margin-right: 0;
-}
-.cp-progress li .front,
-.cp-progress li .back {
-  width: 30px;
-  height: 30px;
-  overflow: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-border-radius: 15px;
-  border-radius: 15px;
-  padding-top: 0px;
-  font-family: arial;
-}
-/* Module/Block: Score Panel */
-.score-panel {
-  display: block;
-  color: #fff;
-  margin-top: 14px;
-  -webkit-user-select: initial;
-  -moz-user-select: initial;
-  -ms-user-select: initial;
-  user-select: initial;
-}
-.score-panel__message {
-  margin-bottom: 17px;
+.senti-poll-poll-text {
   color: #000;
 }
-.score-panel__summary {
-  color: #808080;
+.senti-poll-share-row {
+  overflow: hidden;
+  margin-bottom: 20px;
+  max-width: 500px;
+  margin: auto;
 }
-.score-panel__message,
-.score-panel__summary {
+.question-to-answer {
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
-  -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -o-transition: opacity 1s;
-  -ms-transition: opacity 1s;
-  transition: opacity 1s;
+  -webkit-transition: all 1s ease-in;
+  -moz-transition: all 1s ease-in;
+  -o-transition: all 1s ease-in;
+  -ms-transition: all 1s ease-in;
+  transition: all 1s ease-in;
 }
-.score-panel__message.is-revealed,
-.score-panel__summary.is-revealed {
+.question-to-answer-enter-active {
+  -webkit-transition: all 1s ease-in;
+  -moz-transition: all 1s ease-in;
+  -o-transition: all 1s ease-in;
+  -ms-transition: all 1s ease-in;
+  transition: all 1s ease-in;
   opacity: 1;
   -ms-filter: none;
   filter: none;
 }
-.score-panel__summary {
-  margin-bottom: 18px;
-  position: static;
-  display: block;
-}
-.score-panel__image {
-  display: none;
-  max-width: 300px;
-  margin-bottom: 22px;
-  margin-top: 14px;
-  margin-left: auto;
-  margin-right: auto;
-}
-@media (min-width: 500px) {
-  .outcome-image {
-    float: right;
-    margin-bottom: 30px;
-    margin-top: 6px;
-    margin-left: 10px;
-    margin-right: 0;
-  }
-}
-/* Module/Block: Flipper */
-.flipper {
-  -webkit-transition: 0.6s;
-  -moz-transition: 0.6s;
-  -o-transition: 0.6s;
-  -ms-transition: 0.6s;
-  transition: 0.6s;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  -o-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  position: relative;
-}
-.flipper__circle {
-  width: 30px;
-  height: 30px;
-  overflow: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-border-radius: 15px;
-  border-radius: 15px;
-  padding-top: 0px;
-  font-family: arial;
-}
-.flipper__circle--front {
-  z-index: 2;
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-  background-color: #000;
-  color: #fff;
-}
-.flipper__circle--back {
-  -webkit-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-  background-color: #dcdcdc;
-  color: #000;
-}
-li.answered .flipper {
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-.quiz-complete.answered .flipper {
-  -webkit-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-  color: #fff;
-}
-.quiz-complete.correct .flipper__circle {
-  background-color: #228622;
-  color: #fff;
-}
-.quiz-complete.incorrect .flipper__circle {
-  background-color: #dd371e;
-  color: #fff;
-}
-/* TODO */
-/* Module/Block: Answer Info */
-.answer-information {
+.question-to-answer-leave-active {
+  -webkit-transition: all 1s ease-in;
+  -moz-transition: all 1s ease-in;
+  -o-transition: all 1s ease-in;
+  -ms-transition: all 1s ease-in;
+  transition: all 1s ease-in;
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
-  -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -o-transition: opacity 1s;
-  -ms-transition: opacity 1s;
-  transition: opacity 1s;
 }
-.answer-information {
-  display: none;
+.senti-poll-sharing-wrapper {
   position: relative;
-  top: -30px;
-  margin-left: 10px;
-  margin-right: 10px;
-  background: #eaeaea;
-  color: #000;
-  padding: 10px;
-  font-family: Georgia, serif;
-  text-transform: none;
-  font-size: 16px;
-  -webkit-box-shadow: 0px 5px 24px -7px rgba(10,8,8,0.53);
-  box-shadow: 0px 5px 24px -7px rgba(10,8,8,0.53);
+  margin: 40px auto;
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  -ms-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
 }
-.answer-information:before {
-  content: '';
+.senti-poll-sharing-wrapper.hide-wrapper {
+  height: 0;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+}
+.senti-poll-sharing-wrapper.show-wrapper {
+  height: auto !important;
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+  min-height: 320px;
+}
+.senti-poll-sharing-content {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.senti-poll-bfc {
   position: absolute;
   left: 50%;
-  margin-left: -10px;
-  height: 20px;
-  width: 20px;
-/* -webkit-transform: rotateY(180deg); */
-  -webkit-transform: rotateZ(45deg);
-  -moz-transform: rotateZ(45deg);
-  -o-transform: rotateZ(45deg);
-  -ms-transform: rotateZ(45deg);
-  transform: rotateZ(45deg);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
   background: #eaeaea;
-  top: -10px;
+  padding-right: 320px;
+  height: 100%;
+  -webkit-border-radius: 100%;
+  border-radius: 100%;
 }
-.quiz-complete .answer-information {
-  display: block;
+.triangle-border {
+  position: relative;
+  padding: 15px;
+  margin: 1em 0 3em;
+  border: 3px solid #232323;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  margin-left: 30px;
 }
-.answer-information.is-revealed {
-  opacity: 1;
-  -ms-filter: none;
-  filter: none;
+.triangle-border:before {
+  top: 10px;
+  bottom: auto;
+  left: -30px;
+  border-width: 15px 30px 15px 0;
+  border-color: transparent #5a8f00;
 }
-/*
- * The styles below are not implemented as yet
- * Is .ie-old going to be used in new site?
- * Is .chrome.windows transform: rotate an issue still?
- */
-/*
-
-.quiz-complete-panel h2, #cp-quiz-share, .cp-more, #cp-quiz {
-  opacity: 0;
-  -webkit-transition: opacity 1s;
-  transition: opacity 1s;
+.triangle-border:after {
+  top: 16px;
+  bottom: auto;
+  left: -21px;
+  border-width: 11px 21px 11px 0;
+  border-color: transparent #fff;
 }
-
-.cp-more, #cp-quiz-share
-  opacity 0
+@-moz-keyframes pulse {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    -o-transform: scale3d(1, 1, 1);
+    -ms-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    -moz-transform: scale3d(1.05, 1.05, 1.05);
+    -o-transform: scale3d(1.05, 1.05, 1.05);
+    -ms-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    -o-transform: scale3d(1, 1, 1);
+    -ms-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
 }
-
-.at-resp-share-element a .label {
-  font-family: 'Arial Black','Arial Bold',Arial,Helvetica,sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    -o-transform: scale3d(1, 1, 1);
+    -ms-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    -moz-transform: scale3d(1.05, 1.05, 1.05);
+    -o-transform: scale3d(1.05, 1.05, 1.05);
+    -ms-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    -o-transform: scale3d(1, 1, 1);
+    -ms-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
 }
-
-.ie-old #cp-quiz .cp-progress li.answered .flipper, .ie-old #cp-quiz .cp-progress .front {
-  transform: rotateY(0deg) !important;
+@-o-keyframes pulse {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    -o-transform: scale3d(1, 1, 1);
+    -ms-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    -moz-transform: scale3d(1.05, 1.05, 1.05);
+    -o-transform: scale3d(1.05, 1.05, 1.05);
+    -ms-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    -o-transform: scale3d(1, 1, 1);
+    -ms-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
 }
-
-.ie-old #cp-quiz .cp-progress li {
-  line-height: 28px;
+@keyframes pulse {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    -o-transform: scale3d(1, 1, 1);
+    -ms-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    -moz-transform: scale3d(1.05, 1.05, 1.05);
+    -o-transform: scale3d(1.05, 1.05, 1.05);
+    -ms-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    -o-transform: scale3d(1, 1, 1);
+    -ms-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
 }
-
-.ie-old #cp-quiz .cp-progress li.answered .back {
-  display: none;
+@-moz-keyframes fadeOutUp {
+  0% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+  }
+  100% {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    -webkit-transform: translate3d(0, -100%, 0);
+    -moz-transform: translate3d(0, -100%, 0);
+    -o-transform: translate3d(0, -100%, 0);
+    -ms-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
 }
-.ie-old #cp-quiz .cp-progress li .flipper .front {
-  background-color: #7d7e7f;
+@-webkit-keyframes fadeOutUp {
+  0% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+  }
+  100% {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    -webkit-transform: translate3d(0, -100%, 0);
+    -moz-transform: translate3d(0, -100%, 0);
+    -o-transform: translate3d(0, -100%, 0);
+    -ms-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
 }
-.ie-old #cp-quiz .cp-progress li.answered .flipper .front {
-  background-color: #000;
+@-o-keyframes fadeOutUp {
+  0% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+  }
+  100% {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    -webkit-transform: translate3d(0, -100%, 0);
+    -moz-transform: translate3d(0, -100%, 0);
+    -o-transform: translate3d(0, -100%, 0);
+    -ms-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
 }
-.ie-old #cp-quiz .cp-progress li .front, .chrome.windows #cp-quiz .cp-progress li .front, .chrome.windows #cp-quiz .cp-progress li .back {
-  padding-top: 0px;
+@keyframes fadeOutUp {
+  0% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+  }
+  100% {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    -webkit-transform: translate3d(0, -100%, 0);
+    -moz-transform: translate3d(0, -100%, 0);
+    -o-transform: translate3d(0, -100%, 0);
+    -ms-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
 }
-.ie-old #cp-quiz .cp-progress li.quiz-complete.correct .flipper .front {
-  background-color: rgb(34, 134, 34);
-}
-.ie-old #cp-quiz .cp-progress li.quiz-complete.incorrect .flipper .front {
-  background-color: #DD371E;
-}
-
-.ie-old #cp-quiz .cp-progress.cp-static  ul {
-  width: 110%;
-}
-*/
