Setting share content to 100% width

--- a/resources/assets/styles.css
+++ b/resources/assets/styles.css
@@ -213,6 +213,7 @@
   min-height: 320px;
 }
 .senti-poll-sharing-content {
+  width: 100%;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
