--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -174,6 +174,7 @@
     min-height 320px
 
 .senti-poll-sharing-content
+  width: 100%
   position absolute
   top 50%
   transform translateY(-50%)
