--- a/resources/views/widgets/poll_plugin/template.twig
+++ b/resources/views/widgets/poll_plugin/template.twig
@@ -1,4 +1,6 @@
+{% if poll is empty %}
 {% set poll = TimberPost(widget.poll_post) %}
+{% endif %}
 {% set senti_user_id = fn('get_field', 'agreable_poll_plugin_settings_senti_user_id', 'option') %}
 
 <div class="senti-poll" data-firebase-id="{{ senti_user_id }}/{{poll.firebase_id}}"></div>
