--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -61,6 +61,10 @@
 .senti-poll-social-prompt
   text-align center
 
+.senti-poll-option
+  font-size: 18px
+  font-weight 100
+
 .btn
   &.senti-poll-sharing-button
     border-radius 0px !important
@@ -73,11 +77,14 @@
     font-size 14px
     letter-spacing 0.1em
     padding 0px
+    line-height 2em
   &.senti-poll-vote-button
     border-radius 10px !important
+    border 0 none
     height auto
     padding 10px
     line-height 1.3
+    cursor pointer
 
 @media (min-width: 480px)
   .btn.senti-poll-sharing-button
@@ -135,13 +142,8 @@
   .senti-poll-quote
     font-size 34px
 
-
-.senti-poll-black-bold
-  color #000
+.senti-poll-bold
   font-weight bold
-
-.senti-poll-poll-text
-  color #000
 
 .senti-poll-share-row
   overflow hidden
